fix(menu): add visible border in contrast mode

--- a/packages/components/src/menu/Menu.module.css
+++ b/packages/components/src/menu/Menu.module.css
@@ -10,6 +10,10 @@
     outline: none;
   }
 
+  @media (forced-colors: active) {
+    border: 1px solid;
+  }
+
   .menuSection {
     header {
       background-color: var(--midas-layer-01-base);
@@ -44,6 +48,10 @@
       background-color: var(--midas-menu-item-background-selected);
       color: var(--midas-text-disabled);
       cursor: not-allowed;
+
+      @media (forced-colors: active) {
+        color: GrayText;
+      }
     }
 
     &:focus-visible {
